# SDL_utils

./: .gitignore  meson.build
include/: su_camera.h  su_data_types.h  su_input.h  su_math.h  su_scene.h  su_timer.h  su_utils.h
src/: meson.build  su_camera.c  su_input.c  su_scene.c
subprojects/: MystEcs.wrap  myst_ecs.wrap
